Left-align user names in Add Watcher dialog. Fixes #21
... although that/all popup dialogs could do with some work to make them more
pepper'ish.

--- a/sass/_forms.sass
+++ b/sass/_forms.sass
@@ -151,6 +151,11 @@ form
     table
       margin-top: 0
 
+// Search for watchers form
+#users_for_watcher label
+  text-align: left
+
+
 #filters
   table
     margin: 0
